--- a/src/components/proversion/WhatsNew.css
+++ b/src/components/proversion/WhatsNew.css
@@ -1,14 +1,18 @@
-body {
+/* body {
   background-color: #f5f5f5; 
   margin: 0; 
   font-family: 'Arial', sans-serif; 
-}
+} */
 
 .whats-new-section {
   text-align: center;
   margin-top: 50px;
   padding: 30px;
   color: black; 
+}
+
+.whats-new-section h1{
+  color: black
 }
 
 .features {
